# task-board

./: .gitignore  .replit  README.md  pyproject.toml  replit.nix  requirements.txt  run.sh  start.py
backend/: __init__.py  main.py
backend/models/: __init__.py  task_model.py
backend/repositories/: __init__.py  task_repo.py
backend/routers/: __init__.py  task_router.py
backend/schemas/: __init__.py  task_schema.py
backend/services/: __init__.py  task_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
tests/: __init__.py  test_task_api.py  test_task_service.py
